2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	Improved cleanup when actors are unreferenced, bodies are now
	destroyed upon actor destruction.

	* clutter-box2d.cpp:
	* clutter-box2d.h:

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp:
	* clutter-box2d.h: wrap b2MouseJoint functionality, allow changing
	the gravity of the simulation.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated feature list/todo list.

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* README: augmented TODO list.
	* configure.ac: added AC_PROG_CXX

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.h: sketched out API for adding prismatic, distance,
	revolute and mouse joints.
	* clutter-box2d.cpp: added preliminiary implementation of prismatic,
	distance and revolute joints (will be refactored).

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: improved text.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: Improved code structure and added some comments.
	* clutter-box2d.h: added some comments.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: fixed criteria for synchronising the angle of the
	actor to the body.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: synchronise body/actor when rotation of actor has
	changed.
	* examples/blockbox.c: added rotation of actor to middle mousebutton
	(left mouse button does dragging.)
	* README: added some notes about current limitations of transforms.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* examples/blockbox.c (actor_manipulator_press),
	(actor_manipulator_motion), (actor_manipulator_release)
	(enable_actor_manipulation):  made the code to move actors around
	reside in logic embedded in the stage instead of for each separate
	actor.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated with information about where to check out box2d from
	svn and a known to be good revision.
